--- a/client/stylus/main.styl
+++ b/client/stylus/main.styl
@@ -29,8 +29,6 @@ li
 	padding-top: 5px
 	margin-bottom:40px
 
-.homelogo
-
 .hometitle
 	padding-top: 20px 
 	font-size: 80px
@@ -41,7 +39,29 @@ li
 	font-size: 35px
 	border-bottom-style:solid
 	border-width: 2px
+	border-color: #696969
+	color: #00B326
 
 #homejoinevent
 	border-top-style:solid
+	border-color: #696969
 	padding-top: 25px
+
+
+//************create
+#createheader
+	padding-top: 10px
+	margin-bottom: 20px
+
+#createtitle
+	margin-top: 10px 
+	font-size: 30px
+
+.createText
+	padding-bottom: 20px
+
+.creationText
+	font-size: 24px
+	text-align: center
+
+
