--- a/client/stylus/main.styl
+++ b/client/stylus/main.styl
@@ -40,7 +40,7 @@ li
 	border-bottom-style:solid
 	border-width: 2px
 	border-color: #696969
-	color: #00B326
+	color: #009D20
 
 #homejoinevent
 	border-top-style:solid
@@ -54,14 +54,49 @@ li
 	margin-bottom: 20px
 
 #createtitle
-	margin-top: 10px 
+	margin-top: 15px
+	margin-bottom: 10px 
 	font-size: 30px
+	color: #009D20
+	font-weight: 900
 
 .createText
-	padding-bottom: 20px
+	padding-bottom: 18px
 
 .creationText
 	font-size: 24px
+	padding-bottom: 8px
+	padding-top: 8px
 	text-align: center
 
+.eventsubmit
+	padding-top: 10px
+
+//***************join
+#joinheader
+	padding-top: 10px
+	margin-bottom: 20px
+
+#jointitle
+	margin-top: 15px
+	margin-bottom: 10px 
+	font-size: 30px
+	color: #009D20
+	font-weight: 900
+
+.aneventname
+	font-size: 30px
+	margin-bottom: 4px
+
+.aneventlocation
+	font-size: 18px
+	margin-bottom: 4px
+
+.aneventspeaker
+	font-size: 14px
+	margin-bottom:15px
+	color: #009D20
+
+#joinlogo
+	margin-top: 10px
 
