--- a/client/stylus/main.styl
+++ b/client/stylus/main.styl
@@ -100,3 +100,24 @@ li
 #joinlogo
 	margin-top: 10px
 
+//****************spec
+#specheader
+	padding-top: 10px
+	margin-bottom: 20px
+
+#spectitle
+	margin-top: 15px
+	margin-bottom: 10px 
+	font-size: 30px
+	color: #009D20
+	font-weight: 900
+
+.submitquestion
+	margin-top:10px
+
+#newquestion
+	font-size: 24px
+	padding-bottom: 8px
+	padding-top: 8px
+	text-align: center
+
