--- a/client/stylus/main.styl
+++ b/client/stylus/main.styl
@@ -116,8 +116,26 @@ li
 	margin-top:10px
 
 #newquestion
-	font-size: 24px
+	font-size: 16px
 	padding-bottom: 8px
 	padding-top: 8px
 	text-align: center
+	width: 70%
+	height: 100px
+
+
+#askquestion
+	margin-top:15px
+
+.question
+	font-size:20px
+	padding-left:5px
+	padding-right:5px
+	line-height:120%
+
+.votes
+	margin-top:5px
+	color: #009D20
+	font-size: 18px
+	margin-bottom:6px
 
