--- a/client/stylus/main.styl
+++ b/client/stylus/main.styl
@@ -26,7 +26,7 @@ li
 //header
 .homeheader
 	width: 100%
-	padding-top: 5px
+	margin-top: 15px
 	margin-bottom:40px
 
 .hometitle
@@ -47,7 +47,8 @@ li
 	border-color: #696969
 	padding-top: 25px
 
-
+.settings
+	margin-top: 15px
 //************create
 #createheader
 	padding-top: 10px
@@ -99,6 +100,7 @@ li
 
 #joinlogo
 	margin-top: 10px
+	margin-bottom:15px
 
 //****************spec
 #specheader
@@ -113,7 +115,7 @@ li
 	font-weight: 900
 
 .submitquestion
-	margin-top:10px
+	margin-top:17px
 
 #newquestion
 	font-size: 16px
@@ -139,3 +141,16 @@ li
 	font-size: 18px
 	margin-bottom:6px
 
+//******************admin
+#adminheader
+	padding-top: 10px
+	margin-bottom: 20px
+
+#admintitle
+	margin-top: 15px
+	margin-bottom: 10px 
+	font-size: 30px
+	color: #009D20
+	font-weight: 900
+#endevent
+	margin-top: 50px
