--- a/client/stylus/main.styl
+++ b/client/stylus/main.styl
@@ -154,3 +154,26 @@ li
 	font-weight: 900
 #endevent
 	margin-top: 50px
+//*****************about
+
+//*****************settings
+#settingsheader
+	padding-top: 10px
+	margin-bottom: 20px
+
+#settingstitle
+	margin-top: 15px
+	margin-bottom: 10px 
+	font-size: 30px
+	color: #009D20
+	font-weight: 900
+
+#comingsoon
+	font-size: 30px
+	margin-bottom: 4px
+
+
+#settingslogo
+	margin-top: 50px
+	margin-bottom:15px
+
