changes to about css

--- a/client/stylus/main.styl
+++ b/client/stylus/main.styl
@@ -155,7 +155,30 @@ li
 #endevent
 	margin-top: 50px
 //*****************about
+#aboutheader
+	padding-top: 10px
+	margin-bottom: 20px
 
+#abouttitle
+	margin-top: 15px
+	margin-bottom: 10px 
+	font-size: 30px
+	color: #009D20
+	font-weight: 900
+
+.aboutbullet
+	font-size:18px
+	margin-left:10px
+	margin-right:10px
+
+.abouttext
+	font-size:18px
+	margin-left:10px
+	margin-right:10px
+
+.aboutlogo
+	margin-top: 15px
+	margin-bottom:15px
 //*****************settings
 #settingsheader
 	padding-top: 10px
